--- a/index.html
+++ b/index.html
@@ -1,20 +1,59 @@
 <!DOCTYPE html>
-<!-- ICS2O-xxx -->
+<!-- Final-Project---Venika -->
 <html lang="en-ca">
   <head>
-    <meta charset="utf-8" />
+<meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="xxx" />
+    <meta name="description" content="Final Project" />
     <meta name="keywords" content="mths, ics2o" />
-    <meta name="author" content="xxx" />
-    <title>xxx</title>
+    <meta name="author" content="Venika Sem" />
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>Watch it now!</title>
+    <link rel="canonical" href="https://github.com/MTHS-ICS2O-1-2021/Final-Project---Venika" />
+    <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"></noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
   </head>
   <body>
-    <!-- get the latest release here: https://phaser.io/download/stable-->
-    <script src="//cdn.jsdelivr.net/npm/phaser@3.54.0/dist/phaser.js"></script>
-    <script type="module" src="./js/game.js"></script>
+    <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
+    <script src="./js/script.js"></script>
+    <h1><b>We recommand, you watch!</b></h1>
+    <br>
+    <h3><b>PLEASE SELECT AN OPTION:</b></h3>
+    <br>
+    <h3><b>MOVIES</b></h3>
+    <img src="./img/uncharted.jpg" alt="img" width="15%" height="auto" />
+    <br>
+     <!-- Raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
+onclick="convert()">
+          TAKIE THE MOVIE QUIZ
+        </button>
+    <br>
+    <h3><b>TV SHOWS</b></h3>
+    <img src="./img/freshprince.jpg" alt="img" width="15%" height="auto" />
+    <br>
+     <!-- Raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
+onclick="convert()">
+          TAKE THE TV SHOWS QUIZ
+        </button>
+    <br>
+    <h3><b>CARTOONS</b></h3>
+    <img src="./img/powerpuff.jpg" alt="img" width="15%" height="auto" />
+    <br>
+     <!-- Raised button with ripple -->
+        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
+onclick="convert()">
+          TAKE THE CARTOONS QUIZ
+        </button>
+          <div id="answers">
+          </div>
+      </main>
+    </div>
   </body>
 </html>
