--- a/index.html
+++ b/index.html
@@ -25,17 +25,13 @@
     <br>
     <h3><b>PLEASE SELECT AN OPTION:</b></h3>
     <br>
-    <h3><b>MOVIES</b></h3>
-    <img src="./img/uncharted.jpg" alt="img" width="15%" height="auto" />
+    <img src="./img/image.png" alt="img" width="100%" height="auto" />
+    <div id="api-image"></div>
     <br>
-     <!-- Raised button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
-onclick="convert()">
-          TAKIE THE MOVIE QUIZ
-        </button>
     <br>
-    <h3><b>TV SHOWS</b></h3>
-    <img src="./img/freshprince.jpg" alt="img" width="15%" height="auto" />
+     <!-- button -->
+        <button class="button button2">Take movie quiz</button>>
+    <br>
     <br>
      <!-- Raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
@@ -43,8 +39,6 @@ onclick="convert()">
           TAKE THE TV SHOWS QUIZ
         </button>
     <br>
-    <h3><b>CARTOONS</b></h3>
-    <img src="./img/powerpuff.jpg" alt="img" width="15%" height="auto" />
     <br>
      <!-- Raised button with ripple -->
         <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
