--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <br>
     <br>
      <!-- button -->
-        <button class="button button2">Take movie quiz</button>>
+        <button class="button button2">Take movie quiz</button>
     <br>
     <br>
      <!-- Raised button with ripple -->
