--- a/index.html
+++ b/index.html
@@ -26,25 +26,26 @@
     <h3><b>PLEASE SELECT AN OPTION:</b></h3>
     <br>
     <img src="./img/image.png" alt="img" width="100%" height="auto" />
-    <div id="api-image"></div>
     <br>
     <br>
      <!-- button -->
-        <button class="button button2">Take movie quiz</button>
+     <a href="./movies.html">  
+       <button>TAKE THE MOVIE QUIZ</button>  
+     </a>
     <br>
     <br>
-     <!-- Raised button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
-onclick="convert()">
-          TAKE THE TV SHOWS QUIZ
-        </button>
+     <!-- button -->
+     <a href="./tvshows.html">  
+       <button>TAKE THE TV SHOWS QUIZ</button>  
+     </a>
     <br>
     <br>
-     <!-- Raised button with ripple -->
-        <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" 
-onclick="convert()">
-          TAKE THE CARTOONS QUIZ
-        </button>
+     <!-- button -->
+     <a href="./cartoons.html">  
+       <button>TAKE THE CARTOONS QUIZ</button>  
+     </a>
+    <br>
+    <br>
           <div id="answers">
           </div>
   </body>
