--- a/movies.html
+++ b/movies.html
@@ -19,24 +19,24 @@
     <br>
     <table>
       <tr>
-        <!--Radio buttons for pizza size-->
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+        <!--Radio buttons for first question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion">
+          <input type="radio" id="firstQuestion" class="mdl-radio__button" name="question" value="firstQuestion">
           <span class="mdl-radio__label">A villain who was never understood</span>
         </label>
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="extraLagreSize">
-          <input type="radio" id="extraLagreSize" class="mdl-radio__button" name="pizza" value="extraLagreSize">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion">
+          <input type="radio" id="secondQuestion" class="mdl-radio__button" name="question" value="secondQuestion">
           <span class="mdl-radio__label">A resilient man/woman who has faced diffculties in their lives </span>
         </label>  
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion">
+          <input type="radio" id="thirdQuestion" class="mdl-radio__button" name="question" value="thirdQuestion">
           <span class="mdl-radio__label">Hero and villain movies are not my thing</span>
         </label>
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion">
+          <input type="radio" id="fourthQuestion" class="mdl-radio__button" name="question" value="fourthQuestion">
           <span class="mdl-radio__label">An historical figure</span>
         </label>
         <p></p>
@@ -47,28 +47,89 @@
     <br>
     <table>
       <tr>
-        <!--Radio buttons for pizza size-->
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+        <!--Radio buttons for second question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion2">
+          <input type="radio" id="firstQuestion2" class="mdl-radio__button" name="question" value="firstQuestion2">
           <span class="mdl-radio__label">Me and my friends getting together so we can have a good laugh. </span>
         </label>
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="extraLagreSize">
-          <input type="radio" id="extraLagreSize" class="mdl-radio__button" name="pizza" value="extraLagreSize">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion2">
+          <input type="radio" id="secondQuestion2" class="mdl-radio__button" name="question" value="secondQuestion2">
           <span class="mdl-radio__label">Me and some friends trying to scare ourselves senseless. </span>
         </label> 
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion2">
+          <input type="radio" id="thirdQuestion2" class="mdl-radio__button" name="question" value="thirdQuestion2">
           <span class="mdl-radio__label">Me watching something intellectual and logical on my laptop.</span>
         </label>
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion2">
+          <input type="radio" id="fourthQuestion2" class="mdl-radio__button" name="question" value="fourthQuestion2">
           <span class="mdl-radio__label">Me and my family watching a PG-rated to spend time together.</span>
         </label>
         <p></p>
       </tr>
     </table>
+        <h5><b>How deep do you prefer your movies to be?</b></h5>
+    <br>
+    <table>
+      <tr>
+        <!--Radio buttons for third question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion3">
+          <input type="radio" id="firstQuestion3" class="mdl-radio__button" name="question" value="firstQuestion3">
+          <span class="mdl-radio__label">I don't really care, it's just an entertainment</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion3">
+          <input type="radio" id="secondQuestion3" class="mdl-radio__button" name="question" value="secondQuestion3">
+          <span class="mdl-radio__label">I want to rack my brains for months trying to figure out how that movie ended! </span>
+        </label>  
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion3">
+          <input type="radio" id="thirdQuestion3" class="mdl-radio__button" name="question" value="thirdQuestion3">
+          <span class="mdl-radio__label">I want it to relate to reali life situations, and have moral lessons</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion3">
+          <input type="radio" id="fourthQuestion3" class="mdl-radio__button" name="question" value="fourthQuestion3">
+          <span class="mdl-radio__label">I want to become more intelligent by having watched a film</span>
+        </label>
+        <p></p>
+      </tr>
+    </table>
+    <p></p>
+    <h5><b>What gets your heart rate up the fastest?</b></h5>
+    <br>
+    <table>
+      <tr>
+        <!--Radio buttons for fourth question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion4">
+          <input type="radio" id="firstQuestion4" class="mdl-radio__button" name="question" value="firstQuestion4">
+          <span class="mdl-radio__label">Anything, so please just leave me alone!</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion4">
+          <input type="radio" id="secondQuestion4" class="mdl-radio__button" name="question" value="secondQuestion4">
+          <span class="mdl-radio__label">Not being able to sleep and loving it </span>
+        </label> 
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion4">
+          <input type="radio" id="thirdQuestion4" class="mdl-radio__button" name="question" value="thirdQuestion4">
+          <span class="mdl-radio__label">Anything that puts my safety at risk</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion4">
+          <input type="radio" id="fourthQuestion4" class="mdl-radio__button" name="question" value="fourthQuestion4">
+          <span class="mdl-radio__label">Exercise</span>
+        </label>
+        <p></p>
+      </tr>
+    </table>
+    <p></p>
+    <!-- Raised button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
+     SUBMIT
+    </button>
+    <div id="submit"></div>
   </body>
 </html>
