--- a/cartoons.html
+++ b/cartoons.html
@@ -8,28 +8,128 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Movie Quiz</title>
+    <title>Cartoon Quiz</title>
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
-    <h1><b>Yummy Pizza Order!</b></h1>
+    <h1><b>CARTOON QUIZ</b></h1>
     <br>
-    <h5><b>Please select size:</b></h5>
+    <h5><b>WHat's your opinion on cartoons?:</b></h5>
     <br>
     <table>
       <tr>
-        <!--Radio buttons for pizza size-->
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="largeSize">
-          <input type="radio" id="largeSize" class="mdl-radio__button" name="pizza" value="largeSize">
-          <span class="mdl-radio__label">Large Pizza: $6.00</span>
+        <!--Radio buttons for first question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion">
+          <input type="radio" id="firstQuestion" class="mdl-radio__button" name="question" value="firstQuestion">
+          <span class="mdl-radio__label">Childish, this survey is to find one for my kids</span>
         </label>
         <p></p>
-        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="extraLagreSize">
-          <input type="radio" id="extraLagreSize" class="mdl-radio__button" name="pizza" value="extraLagreSize">
-          <span class="mdl-radio__label">Extra Large Pizza: $10.00</span>
-        </label>   
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion">
+          <input type="radio" id="secondQuestion" class="mdl-radio__button" name="question" value="secondQuestion">
+          <span class="mdl-radio__label">Cartoons are for adults too. </span>
+        </label>  
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion">
+          <input type="radio" id="thirdQuestion" class="mdl-radio__button" name="question" value="thirdQuestion">
+          <span class="mdl-radio__label">it's a great way to remember my childhood</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion">
+          <input type="radio" id="fourthQuestion" class="mdl-radio__button" name="question" value="fourthQuestion">
+          <span class="mdl-radio__label">Cartoon is life!</span>
+        </label>
+        <p></p>
       </tr>
     </table>
+    <p></p>
+    <h5><b>What kind of characters do you prefer to see in cartoons?</b></h5>
+    <br>
+    <table>
+      <tr>
+        <!--Radio buttons for second question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion2">
+          <input type="radio" id="firstQuestion2" class="mdl-radio__button" name="question" value="firstQuestion2">
+          <span class="mdl-radio__label">Animated animals</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion2">
+          <input type="radio" id="secondQuestion2" class="mdl-radio__button" name="question" value="secondQuestion2">
+          <span class="mdl-radio__label">Regular people </span>
+        </label> 
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion2">
+          <input type="radio" id="thirdQuestion2" class="mdl-radio__button" name="question" value="thirdQuestion2">
+          <span class="mdl-radio__label">Fictional characters</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion2">
+          <input type="radio" id="fourthQuestion2" class="mdl-radio__button" name="question" value="fourthQuestion2">
+          <span class="mdl-radio__label">Anime characters</span>
+        </label>
+        <p></p>
+      </tr>
+    </table>
+        <h5><b>How deep do you prefer your cartoons to be?</b></h5>
+    <br>
+    <table>
+      <tr>
+        <!--Radio buttons for third question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion3">
+          <input type="radio" id="firstQuestion3" class="mdl-radio__button" name="question" value="firstQuestion3">
+          <span class="mdl-radio__label">I don't really care, it's just an entertainment</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion3">
+          <input type="radio" id="secondQuestion3" class="mdl-radio__button" name="question" value="secondQuestion3">
+          <span class="mdl-radio__label">I want recommend it to people! </span>
+        </label>  
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion3">
+          <input type="radio" id="thirdQuestion3" class="mdl-radio__button" name="question" value="thirdQuestion3">
+          <span class="mdl-radio__label">I want it to relate to reali life situations, and have moral lessons</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion3">
+          <input type="radio" id="fourthQuestion3" class="mdl-radio__button" name="question" value="fourthQuestion3">
+          <span class="mdl-radio__label">I want to become more intelligent by having watched a film</span>
+        </label>
+        <p></p>
+      </tr>
+    </table>
+    <p></p>
+    <h5><b>What gets your heart rate up the fastest?</b></h5>
+    <br>
+    <table>
+      <tr>
+        <!--Radio buttons for fourth question-->
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion4">
+          <input type="radio" id="firstQuestion4" class="mdl-radio__button" name="question" value="firstQuestion4">
+          <span class="mdl-radio__label">Anything, so please just leave me alone!</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion4">
+          <input type="radio" id="secondQuestion4" class="mdl-radio__button" name="question" value="secondQuestion4">
+          <span class="mdl-radio__label">Not being able to sleep and loving it </span>
+        </label> 
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion4">
+          <input type="radio" id="thirdQuestion4" class="mdl-radio__button" name="question" value="thirdQuestion4">
+          <span class="mdl-radio__label">Anything that puts my safety at risk</span>
+        </label>
+        <p></p>
+        <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion4">
+          <input type="radio" id="fourthQuestion4" class="mdl-radio__button" name="question" value="fourthQuestion4">
+          <span class="mdl-radio__label">Exercise</span>
+        </label>
+        <p></p>
+      </tr>
+    </table>
+    <p></p>
+    <!-- Raised button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
+     SUBMIT
+    </button>
+    <div id="submit"></div>
   </body>
 </html>
