--- a/cartoons.html
+++ b/cartoons.html
@@ -98,29 +98,29 @@
       </tr>
     </table>
     <p></p>
-    <h5><b>What gets your heart rate up the fastest?</b></h5>
+    <h5><b>What makes a good cartoon?</b></h5>
     <br>
     <table>
       <tr>
         <!--Radio buttons for fourth question-->
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="firstQuestion4">
           <input type="radio" id="firstQuestion4" class="mdl-radio__button" name="question" value="firstQuestion4">
-          <span class="mdl-radio__label">Anything, so please just leave me alone!</span>
+          <span class="mdl-radio__label">When it's funny and family-friendly!</span>
         </label>
         <p></p>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="secondQuestion4">
           <input type="radio" id="secondQuestion4" class="mdl-radio__button" name="question" value="secondQuestion4">
-          <span class="mdl-radio__label">Not being able to sleep and loving it </span>
+          <span class="mdl-radio__label">When there's dark humour!</span>
         </label> 
         <p></p>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="thirdQuestion4">
           <input type="radio" id="thirdQuestion4" class="mdl-radio__button" name="question" value="thirdQuestion4">
-          <span class="mdl-radio__label">Anything that puts my safety at risk</span>
+          <span class="mdl-radio__label">When it's emotional</span>
         </label>
         <p></p>
         <label class="mdl-radio mdl-js-radio mdl-js-ripple-effect" for="fourthQuestion4">
           <input type="radio" id="fourthQuestion4" class="mdl-radio__button" name="question" value="fourthQuestion4">
-          <span class="mdl-radio__label">Exercise</span>
+          <span class="mdl-radio__label">When it's intense with lots of actions</span>
         </label>
         <p></p>
       </tr>
