--- a/movies.html
+++ b/movies.html
@@ -126,10 +126,8 @@
       </tr>
     </table>
     <p></p>
-    <!-- Raised button with ripple -->
-    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="buttonClicked()">
-     SUBMIT
-    </button>
+    <!-- button -->
+    <button onclick="buttonClicked()">SUBMIT</button>
     <div id="submit"></div>
   </body>
 </html>
