--- a/movies.html
+++ b/movies.html
@@ -126,8 +126,11 @@
       </tr>
     </table>
     <p></p>
-    <!-- button -->
-    <button onclick="buttonClicked()">SUBMIT</button>
-    <div id="submit"></div>
+     <!-- button -->
+     <a href="./horror.html">  
+       <button>SUBMIT</button>  
+     </a>
+    <br>
+    <br>
   </body>
 </html>
