--- a/comedy.html
+++ b/comedy.html
@@ -12,9 +12,9 @@
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="./js/horror.js"></script>
-    <h2>HORROR MOVIES WERE MADE FOR YOU!</h2>
-    <input type="button" value="Horror Movie Suggestion" onClick="randImg()" />
+    <script src="./js/comedy.js"></script>
+    <h2>COMEDY MOVIES WERE MADE FOR YOU!</h2>
+    <input type="button" value="Comedy Movie Suggestion" onClick="randImg()" />
     <div id="box">
       <img id="image" />
     </div>
