--- a/movies.html
+++ b/movies.html
@@ -127,7 +127,7 @@
     </table>
     <p></p>
      <!-- button -->
-     <a href="./horror.html">  
+     <a href="./comedy.html">  
        <button>SUBMIT</button>  
      </a>
     <br>
