--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <br>
     <h3><b>PLEASE SELECT AN OPTION:</b></h3>
     <br>
-    <img src="./img/image.png" alt="img" width="100%" height="auto" />
+    <img src="./img/netflix.png" alt="img" width="100%" height="auto" />
     <br>
     <br>
      <!-- button -->
