--- a/movies.html
+++ b/movies.html
@@ -8,6 +8,11 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
+    <link rel="canonical" href="https://github.com/MTHS-ICS2O-1-2021/Final-Project---Venika" />
+    <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"></noscript>
     <title>Movie Quiz</title>
     </head>
   <body>
@@ -126,10 +131,10 @@
       </tr>
     </table>
     <p></p>
-     <!-- button -->
-     <a href="./comedy.html">  
-       <button>SUBMIT</button>  
-     </a>
+    <!-- Raised button with ripple -->
+    <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent" onclick="submit()">
+      SUBMIT
+    </button>
     <br>
     <br>
   </body>
