--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
-    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-purple.min.css"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css"></noscript>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
@@ -22,27 +22,24 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/script.js"></script>
     <h1><b>We recommand, you watch!</b></h1>
-    <br>
-    <h3><b>PLEASE SELECT AN OPTION:</b></h3>
+    <h3><b>By taking one of these quizzes, you will know exactly what to watch based on your unique taste and style in cinema.</b></h3>
     <br>
     <img src="./img/netflix.png" alt="img" width="100%" height="auto" />
     <br>
     <br>
      <!-- button -->
      <a href="./movies.html">  
-       <button>TAKE THE MOVIE QUIZ</button>  
-     </a>
-    <br>
-    <br>
-     <!-- button -->
-     <a href="./tvshows.html">  
-       <button>TAKE THE TV SHOWS QUIZ</button>  
+       <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+         TAKE THE MOVIE / TV SHOWS QUIZ
+       </button>
      </a>
     <br>
     <br>
      <!-- button -->
      <a href="./cartoons.html">  
-       <button>TAKE THE CARTOONS QUIZ</button>  
+       <button class="mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--accent">
+         TAKE THE CARTOON QUIZ
+       </button>
      </a>
     <br>
     <br>
