--- a/action.html
+++ b/action.html
@@ -8,16 +8,23 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Movie Quiz</title>
+    <title>Action Movies</title>
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="./js/comedy.js"></script>
-    <h2>ACTION MOVIES WERE MADE FOR YOU!</h2>
-    <input type="button" value="Action Movie Suggestion" onClick="randImg()" />
+    <script src="./js/action.js"></script>
+    <h1>ACTION MOVIES WERE MADE FOR YOU!</h1>
+    <br>
+    <img src="./img/action.png" alt="img" width="15%" height="auto" />
+    <br>
+    <p>Action genre is in which the protagonist is thrust into a series of events that typically involve violence and physical feats. You have a very strong and straighfowartd personality.</p>
+    <b>
+    <b>
+    <input type="button" value="Action Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    <br />
+    </b>
+    </b>
   </body>
 </html>
