--- a/romance.html
+++ b/romance.html
@@ -8,16 +8,23 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Movie Quiz</title>
+    <title>Romance Movies</title>
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="./js/comedy.js"></script>
-    <h2>ROMANCE MOVIES WERE MADE FOR YOU!</h2>
-    <input type="button" value="Romance Movie Suggestion" onClick="randImg()" />
+    <script src="./js/romance.js"></script>
+    <h1>ROMANCE MOVIES WERE MADE FOR YOU!</h1>
+    <br>
+    <img src="./img/romance.png" alt="img" width="15%" height="auto" />
+    <br>
+    <p>Romance films or movies involve romantic love stories that focus on passion, emotion, and the affectionate romantic involvement of the main characters.</p>
+    <b>
+    <b>
+    <input type="button" value="Romance Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    <br />
+    </b>
+    </b>
   </body>
 </html>
