--- a/fantasy.html
+++ b/fantasy.html
@@ -8,16 +8,23 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Movie Quiz</title>
+    <title>Fantasy Movies</title>
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="./js/comedy.js"></script>
-    <h2>HORROR MOVIES WERE MADE FOR YOU!</h2>
-    <input type="button" value="Horror Movie Suggestion" onClick="randImg()" />
+    <script src="./js/fantasy.js"></script>
+    <h1>FANTASY MOVIES WERE MADE FOR YOU!</h1>
+    <br>
+    <img src="./img/fantasy.png" alt="img" width="15%" height="auto" />
+    <br>
+    <p>Films or tv shows that belong to the fantasy genre with fantastic themes, usually magic, supernatural events, mythology, folklore, or exotic fantasy worlds.</p>
+    <b>
+    <b>
+    <input type="button" value="Fantasy Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    <br />
+    </b>
+    </b>
   </body>
 </html>
