--- a/comics.html
+++ b/comics.html
@@ -8,19 +8,19 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Cinephile Personality!</title>
+    <title>Comics</title>
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
-    <script src="./js/cinephile.js"></script>
-    <h1>YOU ARE A CINEPHILE PERSON... ALL MOVIES WERE MADE FOR YOU!</h1>
+    <script src="./js/comics.js"></script>
+    <h1>COMICS WERE MADE FOR YOU!</h1>
     <br>
-    <img src="./img/cinephile.png" alt="img" width="15%" height="auto" />
+    <img src="./img/comics.png" alt="img" width="15%" height="auto" />
     <br>
-    <p>You are and can be a fan of any genre of movoie! Wheter it's action, romance, family movie, or anything else... "IDK" is your phrase when it comes to picking what movie to watch on nextflix. Enjouy all and any type of movies in the industry of art and cinema!</p>
+    <p>Comics is a medium used to express ideas with images, often combined with text or other visual information. It typically takes the form of a sequence of panels of images.</p>
     <b>
     <b>
-    <input type="button" value=" Movie Suggestion" onClick="randImg()"/>
+    <input type="button" value="Comics Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
