--- a/cartoons.html
+++ b/cartoons.html
@@ -19,6 +19,9 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/cartoon.js"></script>
     <h1><b>CARTOONS QUIZ</b></h1>
+    <br>
+    <img src="./img/cartoons.jpeg" alt="img" width="40%" height="auto" />
+    <br>
     <h5><b>1. How do you spend most of your time?</b></h5>
     <table>
       <tr>
