--- a/movies.html
+++ b/movies.html
@@ -19,6 +19,9 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/movie.js"></script>
     <h1><b>MOVIE QUIZ</b></h1>
+    <br>
+    <img src="./img/movies.jpeg" alt="img" width="40%" height="auto" />
+    <br>
     <h5><b>1. With who and how do you spend most of your days?</b></h5>
     <table>
       <tr>
