--- a/action.html
+++ b/action.html
@@ -9,15 +9,20 @@
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Action Movies</title>
+    <link rel="canonical" href="https://github.com/MTHS-ICS2O-1-2021/Final-Project---Venika" />
+    <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/action.js"></script>
     <h1>ACTION MOVIES WERE MADE FOR YOU!</h1>
-    <br>
-    <img src="./img/action.png" alt="img" width="15%" height="auto" />
-    <br>
-    <p>Action genre is in which the protagonist is thrust into a series of events that typically involve violence and physical feats. You have a very strong and straighfowartd personality.</p>
+    <h3>Action genre is in which the protagonist is thrust into a series of events that typically involve violence and physical feats. You have a very strong and straighfowartd personality.</h3>
     <b>
     <b>
     <input type="button" value="Action Movie Suggestion" onClick="randImg()"/>
