--- a/cinephile.html
+++ b/cinephile.html
@@ -8,16 +8,21 @@
     <meta name="keywords" content="mths, ics2o" />
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
-    <title>Cinephile Personality!</title>
+    <title>Cinephie Personality!</title>
+    <link rel="canonical" href="https://github.com/MTHS-ICS2O-1-2021/Final-Project---Venika" />
+    <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/cinephile.js"></script>
-    <h1>YOU ARE A CINEPHILE PERSON... ALL MOVIES WERE MADE FOR YOU!</h1>
-    <br>
-    <img src="./img/cinephile.png" alt="img" width="15%" height="auto" />
-    <br>
-    <p>You are and can be a fan of any genre of movoie! Wheter it's action, romance, family movie, or anything else... "IDK" is your phrase when it comes to picking what movie to watch on nextflix. Enjouy all and any type of movies in the industry of art and cinema!</p>
+    <h1>YOU ARE A CINEPHILE PERSON...!</h1>
+    <h3>You are and can be a fan of any genre of movoie! Enjoy all and any type of movie in the industry of art and cinema!</h3>
     <b>
     <b>
     <input type="button" value=" Movie Suggestion" onClick="randImg()"/>
