--- a/comedy.html
+++ b/comedy.html
@@ -9,15 +9,20 @@
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Comedy Movies</title>
+    <link rel="canonical" href="https://github.com/MTHS-ICS2O-1-2021/Final-Project---Venika" />
+    <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/comedy.js"></script>
-    <h1>COMEDY MOVIES WERE MADE FOR YOU!</h1>
-    <br>
-    <img src="./img/comedy.png" alt="img" width="15%" height="auto" />
-    <br>
-    <p>A comedy film or tv show is a category of film which emphasizes humor. They are designed to make the audience laugh through amusemen.</p>
+    <h1>COMEDY MOVIES ARE MADE FOR YOU!</h1>
+    <h3>A comedy film or tv show is a category of film which emphasizes humor. They are designed to make the audience laugh through amusemen.</h3>
     <b>
     <b>
     <input type="button" value="Comedy Movie Suggestion" onClick="randImg()"/>
