--- a/otaku.html
+++ b/otaku.html
@@ -9,15 +9,20 @@
     <meta name="author" content="Venika Sem" />
     <meta name="theme-color" content="#FFFFFF" />
     <title>Okatu Personality!</title>
+    <link rel="canonical" href="https://github.com/MTHS-ICS2O-1-2021/Final-Project---Venika" />
+    <link rel="manifest" href="/Final-Project---Venika/manifest.webmanifest" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons"></noscript>
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css" media="none" onload="if(media!='all')media='all'"><noscript><link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.blue-indigo.min.css"></noscript>
+    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png" />
     </head>
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/okatu.js"></script>
-    <h1>YOU ARE AN OKATU PERSON... ALL CARTOONS WERE MADE FOR YOU!</h1>
-    <br>
-    <img src="./img/okatu.png" alt="img" width="15%" height="auto" />
-    <br>
-    <p>Otaku is a Japanese word that describes people with interests diverse in anime, manga, video games, or computers.You are and can be a fan of any genre of cartoon! Wheter it's superhero, comcis, or anything else... "IDK" is your phrase when it comes to picking what cartoon!</p>
+    <h1>YOU ARE AN OKATU PERSON...!</h1>
+    <h3>Otaku is a Japanese word that describes people with interests diverse in anime, manga, video games, or computers.You are and can be a fan of any genre of cartoon!</h3>
     <b>
     <b>
     <input type="button" value=" Cartoon Suggestion" onClick="randImg()"/>
