--- a/anime.html
+++ b/anime.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/anime.js"></script>
-    <h1>ANIMES ARE MADE FOR YOU!</h1>
-    <h3>Anime is hand-drawn and computer-generated animation originating from Japan.</h3>
-    <b>
-    <b>
+    <h1><b>ANIMES ARE MADE FOR YOU!</b></h1>
+    <h3><b>Anime is hand-drawn and computer-generated animation originating from Japan.</b></h3>
     <input type="button" value="Anime Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
