--- a/comics.html
+++ b/comics.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/comics.js"></script>
-    <h1>COMICS ARE MADE FOR YOU!</h1>
-    <h3>Comics is a medium used to express ideas with images, often combined with text or other visual information. It typically takes the form of a sequence of panels of images.</h3>
-    <b>
-    <b>
+    <h1><b>COMICS ARE MADE FOR YOU!</b></h1>
+    <h3><b>Comics is a medium used to express ideas with images, often combined with text or other visual information. It typically takes the form of a sequence of panels of images.
     <input type="button" value="Comics Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
