--- a/action.html
+++ b/action.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/action.js"></script>
-    <h1>ACTION MOVIES WERE MADE FOR YOU!</h1>
-    <h3>Action genre is in which the protagonist is thrust into a series of events that typically involve violence and physical feats. You have a very strong and straighfowartd personality.</h3>
-    <b>
-    <b>
+    <h1><b>ACTION MOVIES WERE MADE FOR YOU!</b></h1>
+    <h3><b>Action genre is in which the protagonist is thrust into a series of events that typically involve violence and physical feats. You have a very strong and straighfowartd personality.</b></h3>
     <input type="button" value="Action Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
