--- a/animated.html
+++ b/animated.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/animated.js"></script>
-    <h1>ANIMATED CARTOONS ARE MADE FOR YOU!</h1>
+    <h1><b>ANIMATED CARTOONS ARE MADE FOR YOU!</b></h1>
     <h3>Animated cartoon is a motion picture that is made from a series of drawings, computer graphics, or photographs of inanimate objects (such as puppets) and that simulates movement by slight progressive changes in each frame.</h3>
-    <b>
-    <b>
     <input type="button" value="Animated Cartoon Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
