--- a/comedy.html
+++ b/comedy.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/comedy.js"></script>
-    <h1>COMEDY MOVIES ARE MADE FOR YOU!</h1>
-    <h3>A comedy film or tv show is a category of film which emphasizes humor. They are designed to make the audience laugh through amusemen.</h3>
-    <b>
-    <b>
+    <h1><b>COMEDY MOVIES ARE MADE FOR YOU!</b></h1>
+    <h3><b>A comedy film or tv show is a category of film which emphasizes humor. They are designed to make the audience laugh through amusement.</b></h3>
     <input type="button" value="Comedy Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
