--- a/family.html
+++ b/family.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/family.js"></script>
-    <h1>FAMILY ARE WERE MADE FOR YOU!</h1>
-    <h3>Family film is a genre that is contains appropriate content for younger viewers. Family film aims to appeal not only to children, but to a wide range of ages. While the storyline may appeal to a younger audience, there are components of the film that are geared towards adults.</h3>
-    <b>
-    <b>
+    <h1><b>FAMILY ARE WERE MADE FOR YOU!</b></h1>
+    <h3><b>Family film is a genre that is contains appropriate content for younger viewers. Family film aims to appeal not only to children, but to a wide range of ages. While the storyline may appeal to a younger audience, there are components of the film that are geared towards adults.</b></h3>
     <input type="button" value="Family Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
