--- a/fantasy.html
+++ b/fantasy.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/fantasy.js"></script>
-    <h1>FANTASY MOVIES ARE MADE FOR YOU!</h1>
-    <h3>Films or tv shows that belong to the fantasy genre with fantastic themes, usually magic, supernatural events, mythology, folklore, or exotic fantasy worlds.</h3>
-    <b>
-    <b>
+    <h1><b>FANTASY MOVIES ARE MADE FOR YOU!</b></h1>
+    <h3><b>Films or tv shows that belong to the fantasy genre with fantastic themes, usually magic, supernatural events, mythology, folklore, or exotic fantasy worlds.</b></h3>
     <input type="button" value="Fantasy Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
