--- a/otaku.html
+++ b/otaku.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/okatu.js"></script>
-    <h1>YOU ARE AN OKATU PERSON...!</h1>
-    <h3>Otaku is a Japanese word that describes people with interests diverse in anime, manga, video games, or computers.You are and can be a fan of any genre of cartoon!</h3>
-    <b>
-    <b>
+    <h1><b>YOU ARE AN OKATU PERSON...!</b></h1>
+    <h3><b>Otaku is a Japanese word that describes people with interests diverse in anime, manga, video games, or computers.You are and can be a fan of any genre of cartoon!</b></h3>
     <input type="button" value=" Cartoon Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
