--- a/romance.html
+++ b/romance.html
@@ -21,15 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/romance.js"></script>
-    <h1>ROMANCE MOVIES ARE MADE FOR YOU!</h1>
-    <h3>Romance films or movies involve romantic love stories that focus on passion, emotion, and the affectionate romantic involvement of the main characters.</h3>
-    <b>
-    <b>
+    <h1><b>ROMANCE MOVIES ARE MADE FOR YOU!</b></h1>
+    <h3><b>Romance films or movies involve romantic love stories that focus on passion, emotion, and the affectionate romantic involvement of the main characters.</b></h3>
     <input type="button" value="Romance Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
