--- a/superhero.html
+++ b/superhero.html
@@ -21,18 +21,11 @@
   <body>
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/superhero.js"></script>
-    <h1>SUPERHERO CARTOONS CARTOONS ARE MADE FOR YOU!</h1>
-    <br>
-    <img src="./img/superhero.png" alt="img" width="10%" height="auto" />
-    <br>
-    <h3>A cartoon in which a superhero is who has special powers and fights against evil.</h3>
-    <b>
-    <b>
+    <h1><b>SUPERHERO CARTOONS CARTOONS ARE MADE FOR YOU!</b></h1>
+    <h3><b>A cartoon in which a superhero is who has special powers and fights against evil.</b></h3>
     <input type="button" value="Superhero Cartoon Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
     </div>
-    </b>
-    </b>
   </body>
 </html>
