--- a/cinephile.html
+++ b/cinephile.html
@@ -22,7 +22,7 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/cinephile.js"></script>
     <h1><b>YOU ARE A CINEPHILE PERSON...!</b></h1>
-    <h3><b>You are and can be a fan of any genre of movoie! Enjoy all and any type of movie in the industry of art and cinema!</b></h3>
+    <h3><b>You are and can be a fan of any genre of movie! Enjoy all and any type of movie in the industry of art and cinema!</b></h3>
     <input type="button" value=" Movie Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
