--- a/comics.html
+++ b/comics.html
@@ -22,7 +22,7 @@
     <script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
     <script src="./js/comics.js"></script>
     <h1><b>COMICS ARE MADE FOR YOU!</b></h1>
-    <h3><b>Comics is a medium used to express ideas with images, often combined with text or other visual information. It typically takes the form of a sequence of panels of images.</b>
+    <h3><b>Comics is a medium used to express ideas with images, often combined with text or other visual information. It typically takes the form of a sequence of panels of images.</b></h3>
     <input type="button" value="Comics Suggestion" onClick="randImg()"/>
     <div id="box">
       <img id="image" />
