--- a/cartoons.html
+++ b/cartoons.html
@@ -23,7 +23,7 @@
     <script src="./js/cartoon.js"></script>
     <h1><b>CARTOONS QUIZ</b></h1>
     <br>
-    <img src="./img/cartoons.png" alt="img" width="40%" height="auto" />
+    <img src="./img/cartoon.png" alt="img" width="40%" height="auto" />
     <br>
     <h5><b>1. How do you spend most of your time?</b></h5>
     <table>
